--- a/css/shopping_cart.css
+++ b/css/shopping_cart.css
@@ -12,7 +12,7 @@
 }
 body {
   font-family: 'Spoqa Han Sans Neo', 'SpoqaHanSansNeo-Regular' 'sans-serif';
-  background-color: var(--hex_white);;
+  background-color: var(--hex_white);
 }
 .screen_reader_only {
   position: absolute;
@@ -27,4 +27,80 @@ body {
 }
 .bold_font {
   font-weight: 700;
+}
+
+
+
+#top_navigation_bar {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 90px;
+  box-shadow: 0 10px 10px -5px var(--main_light_gray_color);
+  background-color: var(--hex_white);
+}
+#top_navigation_bar .top_navigation_bar_center {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: calc(100% - 640px);
+  margin: 0 auto;
+  height: 90px;
+}
+#top_navigation_bar .logo_container {
+  display: flex;
+  align-items: center;
+}
+#top_navigation_bar .logo_container .logo_image {
+  width: 124px;
+  height: 38px;
+  margin-right: 30px;
+}
+
+.top_search {
+  position: relative;
+}
+#top_search_input {
+  width: 400px;
+  height: 46px;
+  padding-top: 4px;
+  padding-left: 22px;
+  background-color: var(--hex_white);
+  border: 2px solid var(--main_green_color);
+  border-radius: 50px;
+  outline: none;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+}
+#top_search_input::placeholder {
+  color: var(--main_gray_color);
+}
+
+.search_button {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translate(-50%, -50%);
+  width: 28px;
+  height: 28px;
+}
+.search_button_icon_image {
+  width: 100%;
+}
+.top_navigation_list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 26px;
+  color: var(--main_gray_color);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 14px;
+  white-space : nowrap;
+}
+.shopping_cart_title {
+  color: var(--main_green_color);
 }
