--- a/css/shopping_cart.css
+++ b/css/shopping_cart.css
@@ -104,3 +104,61 @@ body {
 .shopping_cart_title {
   color: var(--main_green_color);
 }
+
+
+
+#bottom_info_bar {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 298px;
+  font-size: 14px;
+  background-color: var(--main_light_gray_color);
+}
+#bottom_info_bar > .bottom_info_center {
+  display: block;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: calc(100% - 640px);
+  margin: 0 auto;
+  padding-top: 60px;
+  padding-bottom: 30px;
+}
+#bottom_info_bar > .bottom_info_center > .policy_and_social_box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 30px;
+}
+#bottom_info_bar > .bottom_info_center > .policy_and_social_box > .policy_info {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  white-space : nowrap;
+}
+#bottom_info_bar > .bottom_info_center > .policy_and_social_box > .policy_info li:not(:first-child)::before {
+  content: '|';
+  padding-left: 14px;
+  padding-right: 14px;
+  font-weight: 400;
+}
+#bottom_info_bar > .bottom_info_center > .policy_and_social_box > .social_info {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+  gap: 14px;
+}
+#bottom_info_bar > .bottom_info_center > .bottom_line {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid var(--line_gray_color);
+}
+#bottom_info_bar > .bottom_info_center > .company_info {
+  padding-top: 30px;
+  color: var(--main_gray_color);
+  line-height: 24px;
+  white-space : nowrap;
+}
