--- a/css/product_buyer.css
+++ b/css/product_buyer.css
@@ -89,17 +89,45 @@ body {
 .search_button_icon_image {
   width: 100%;
 }
+
 .top_navigation_list {
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
   gap: 26px;
+  white-space: nowrap;
+}
+.top_navigation_link {
+  display: flex;
+  align-items: end;
+  width: 100%;
+  height: 50px;
+  background-size: 32px 32px;
+  background-repeat: no-repeat;
+  background-position: center top;
   color: var(--main_gray_color);
+}
+.top_navigation_link:hover {
+  color: var(--main_green_color);
+}
+.cart_image {
+  background-image: url(../image/navigation_icon_shopping_cart_empty.svg);
+}
+.cart_image:hover {
+  background-image: url(../image/navigation_icon_shopping_cart_filled.svg);
+}
+.mypage_image {
+  background-image: url(../image/navigation_icon_user_empty.svg);
+}
+.mypage_image:hover {
+  background-image: url(../image/navigation_icon_user_filled.svg);
+}
+.top_navigation_title {
+  text-align: center;
   font-size: 12px;
   font-weight: 400;
   line-height: 14px;
-  white-space : nowrap;
+  white-space: nowrap;
 }
 
 
@@ -186,7 +214,7 @@ body {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  white-space : nowrap;
+  white-space: nowrap;
 }
 #bottom_info_bar > .bottom_info_center > .policy_and_social_box > .policy_info li:not(:first-child)::before {
   content: '|';
@@ -211,5 +239,5 @@ body {
   padding-top: 30px;
   color: var(--main_gray_color);
   line-height: 24px;
-  white-space : nowrap;
+  white-space: nowrap;
 }
