--- a/css/shopping_cart.css
+++ b/css/shopping_cart.css
@@ -137,6 +137,61 @@ body {
 
 
 
+.product_table_caption {
+  margin-top: 54px;
+  margin-bottom: 52px;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 44px;
+  text-align: center;
+}
+.product_table_row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100vw;
+  max-width: calc(100% - 640px);
+  height: 60px;
+  margin: 0 auto;
+  margin-bottom: 35px;
+  
+  border-radius: 10px;
+
+  font-size: 18px;
+  line-height: 23px;
+  white-space: nowrap;
+  background-color: var(--main_white_color);
+}
+#product_radio_input[type='radio'] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20px;
+  height: 20px;
+
+  border: 2px solid var(--main_green_color);
+  border-radius: 50%;
+  outline: none;
+  cursor: pointer;
+} 
+#product_radio_input[type='radio']:checked {
+  background-color: var(--main_green_color);
+  border: 4px solid var(--main_white_color);
+  box-shadow: 0 0 0 1.6px var(--main_green_color);
+}
+.product_title_radio {
+  padding-left: 30px;
+}
+.product_title_price {
+  padding-right: 131px;
+}
+
+
+
 #bottom_info_bar {
   display: flex;
   justify-content: center;
