--- a/css/login_buyer.css
+++ b/css/login_buyer.css
@@ -9,6 +9,8 @@
   --main_gray_color: #767676;
   --main_light_gray_color: #DBDBDB;
   --line_gray_color: #C4C4C4;
+  --main_black_color: #333333;
+  --error_red_color: #EB5757;
 }
 body {
   font-family: 'Spoqa Han Sans Neo', 'SpoqaHanSansNeo-Regular' 'sans-serif';
@@ -39,4 +41,114 @@ body {
 #logo_center .logo_image {
   margin-top: 100px;
   margin-bottom: 70px;
+}
+
+
+
+.login_container {
+  width: 100%;
+  max-width: 550px;
+  top: 50%;
+  left: 50%;
+  margin: 0 auto;
+  border-radius: 10px;
+}
+
+.login_tabs {
+  display: flex;
+}
+.login_tab_button {
+  /* flex: 1 로 축약 가능 */
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 0%;
+
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: var(--main_white_color);
+  border: 1px solid var(--line_gray_color);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 22px;
+  text-align: center;
+  white-space: nowrap;
+}
+.login_tab_button.active {
+  background-color: var(--hex_white);
+  border-bottom: 1px solid var(--hex_white)
+}
+
+
+.login_form {
+  padding-top: 36px;
+  padding-bottom: 36px;
+  padding-left: 35px;
+  padding-right: 35px;
+  border: 1px solid var(--line_gray_color);
+  border-top: 1px solid var(--hex_white);
+  border-radius: 10px;
+  color: var(--hex_white);
+}
+
+
+.login_input {
+  width: 100%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid var(--line_gray_color);
+  font-size: 14px;
+  box-sizing: border-box;
+}
+.login_input::placeholder {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  color: var(--main_gray_color);
+}
+.login_input:focus {
+  border-color: var(--main_green_color);
+  outline: none;
+}
+.login_button {
+  width: 100%;
+  height: 60px;
+  margin-top: 36px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 700;
+  color: var(--hex_white);
+  background-color: var(--main_green_color);
+}
+
+
+.same_error_message {
+  display: none;
+  margin-top: 26px;
+  margin-bottom: -10px;
+  color: var(--error_red_color);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+}
+
+.login_options {
+  margin-top: 20px;
+  text-align: center;
+  font-size: 14px;
+}
+.option_text {
+  color: var(--main_black_color);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  text-align: center;
+  white-space: nowrap;
+}
+.option_text:last-child::before {
+  content: '|';
+  margin-left: 12px;
+  margin-right: 14px;
 }
