--- a/css/login.css
+++ b/css/login.css
@@ -89,7 +89,8 @@ body {
   padding-right: 35px;
   border: 1px solid var(--line_gray_color);
   border-top: 1px solid var(--hex_white);
-  border-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   color: var(--hex_white);
 }
 
