--- a/css/error404.css
+++ b/css/error404.css
@@ -12,7 +12,7 @@
 }
 body {
   font-family: 'Spoqa Han Sans Neo', 'SpoqaHanSansNeo-Regular' 'sans-serif';
-  background-color: var(--hex_white);;
+  background-color: var(--hex_white);
 }
 .screen_reader_only {
   position: absolute;
